--- a/1. Preprocessing/1-1. 데이터_취합.ipynb
+++ b/1. Preprocessing/1-1. 데이터_취합.ipynb
@@ -55,6 +55,7 @@
    },
    "outputs": [],
    "source": [
+    "# KEMDy20 데이터셋이 저장되어있는 경로 이름\"
     "path = 'E:/2022년/PSAT/주제분석/KEMDy20'\n",
     "os.chdir(path)"
    ]
